# datastructures_in_rust

./: Cargo.toml  README.md
benches/: benchmark.rs
src/: input.txt  lib.rs  main.rs
src/intervals/: brute_force.rs  mod.rs  segment_tree.rs
src/intervals/segment_tree/: array_based_segment_tree.rs  dynamic_segment_tree.rs  dynamic_segment_tree_with_range_updates.rs  mod.rs
src/leetcode/: parser.rs
tests/: segment_tree.rs
