[package]
edition = "2018"
name = "datastructures_in_rust"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["pretty_print"]
pretty_print = []

[dependencies]
# For pretty print
atoi = "0.4.0"
colored = "2"

[dev-dependencies]
criterion = "0.3"
rand = "0.8.0"

[[bench]]
harness = false
name = "benchmark"

[profile.release]
debug = true
[profile.bench]
debug = true
